--- a/style-guide.html
+++ b/style-guide.html
@@ -115,6 +115,7 @@
 </head>
 <body>
     <h1>Website Style Guide</h1>
+    <a href="/index.html">Back to Home</a>
 
     <section>
         <h2>Typography</h2>
