--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Example</title>
     </head>
     <body>
+        <a href="/style-guide.html">Style Guide</a>
         <p>This is an example of a simple HTML page with one paragraph.</p>
     </body>
 </html>
