--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Example</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </head>
     <body>
-        <a href="/style-guide.html">Style Guide</a>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <div id="particles-js"></div> <!-- The container for the animated particles -->
+        <h1>Micah's Creative Site</h1>
+        <script src="script.js"></script>
     </body>
 </html>
