--- a/style-guide.html
+++ b/style-guide.html
@@ -4,114 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Guide</title>
-    <style>
-        /* Variables for your color palette */
-        :root {
-            /* Primary Colors */
-            --primary-100: #E6F3FF;
-            --primary-300: #80BFFF;
-            --primary-500: #1A8CFF;
-            --primary-700: #0066CC;
-            --primary-900: #000;
-
-            /* Neutral Colors */
-            --neutral-100: #F5F5F5;
-            --neutral-300: #D4D4D4;
-            --neutral-500: #737373;
-            --neutral-700: #404040;
-            --neutral-900: #171717;
-
-            /* Accent Colors */
-            --accent-green: #4CAF50;
-            --accent-red: #F44336;
-            --accent-yellow: #FFC107;
-        }
-
-        /* Base Styles */
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 2rem;
-            color: var(--neutral-900);
-        }
-
-        /* Typography */
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            color: var(--primary-700);
-        }
-
-        h2 {
-            font-size: 2rem;
-            margin: 2rem 0 1rem;
-            color: var(--primary-500);
-        }
-
-        h3 {
-            font-size: 1.5rem;
-            margin: 1.5rem 0 1rem;
-            color: var(--neutral-700);
-        }
-
-        p {
-            font-size: 1rem;
-            margin: 1rem 0;
-        }
-
-        /* Color Swatches */
-        .color-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin: 2rem 0;
-        }
-
-        .color-swatch {
-            padding: 1rem;
-            border-radius: 8px;
-            color: white;
-            min-height: 100px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-        }
-
-        /* Typography Examples */
-        .type-example {
-            margin: 2rem 0;
-            padding: 1rem;
-            border: 1px solid var(--neutral-300);
-            border-radius: 8px;
-        }
-
-        /* Component Examples */
-        .button {
-            display: inline-block;
-            padding: 0.75rem 1.5rem;
-            border-radius: 4px;
-            font-weight: 600;
-            text-decoration: none;
-            margin: 0.5rem;
-            cursor: pointer;
-        }
-
-        .button-primary {
-            background-color: var(--primary-500);
-            color: white;
-        }
-
-        .button-secondary {
-            background-color: var(--neutral-300);
-            color: var(--neutral-900);
-        }
-
-        .button-accent {
-            background-color: var(--accent-green);
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Website Style Guide</h1>
